--- a/feat-transactions/src/styles.scss
+++ b/feat-transactions/src/styles.scss
@@ -33,10 +33,13 @@ button {
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
-// button:hover {
-//   background-color: black;
+
+// a {
+//   background-color: #1976d2;
 //   color: white;
+//   background: #eee;
 // }
+
 button:hover {
   background-color: #1976d2;
   color: white;
@@ -124,7 +127,6 @@ ul {
 }
 .credit {
   background-color: #b5d7b5;
-
 }
 
 .debit {
