--- a/feat-transactions/src/styles.scss
+++ b/feat-transactions/src/styles.scss
@@ -34,12 +34,7 @@ button {
   margin-top: 1rem;
 }
 
-// a {
-//   background-color: #1976d2;
-//   color: white;
-//   background: #eee;
-// }
-
+a:hover,
 button:hover {
   background-color: #1976d2;
   color: white;
