- added the orderBy function to transactions

--- a/feat-transactions/src/app/transaction-details/transaction-details.component.html
+++ b/feat-transactions/src/app/transaction-details/transaction-details.component.html
@@ -43,7 +43,7 @@
     <div class="transaction-item">
       <span class="key"> Date </span>
       <span class="value">
-        {{ transaction.timestamp | date : "EE, MMMM d, y h:mm a" }}
+        {{ transaction.timestamp | date : "EE, MMMM d, y H:MM a" }}
       </span>
     </div>
   </div>
