--- a/feat-transactions/src/app/app.component.html
+++ b/feat-transactions/src/app/app.component.html
@@ -132,6 +132,7 @@
   </a>
 </div>
 
+<!-- Main content goes here  -->
 <div class="content" role="main">
   <router-outlet></router-outlet>
 </div>
